fixed modal z-index

--- a/app/landing/modals/groupcreate/groupcreate.css
+++ b/app/landing/modals/groupcreate/groupcreate.css
@@ -9,6 +9,7 @@
     position:absolute;
     top: 30%;
     border-radius:10px;
+    z-index: 1;
 }
 .exit-modal{
     position:absolute;
