--- a/app/landing/modals/groupinvite/groupinvite.css
+++ b/app/landing/modals/groupinvite/groupinvite.css
@@ -16,6 +16,7 @@
     position:absolute;
     top: 30%;
     border-radius:10px;
+    z-index: 1;
 }
 .groups-join{
     margin-top:28px;
@@ -25,6 +26,7 @@
     width:220px;
     height:35px;
     /* border-radius:7px; */
+    
 }
 .copy-text{
     border:1px solid black;
