--- a/app/landing/modals/groupjoin/groupjoin.css
+++ b/app/landing/modals/groupjoin/groupjoin.css
@@ -10,6 +10,7 @@
     display:flex;
     /* margin:15px; */
     border-radius: 10px;
+    z-index: 1;
 }
 .exit-modal{
     position:absolute;
